prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_token_brace.nut
// EXPECT_ERROR: "expected '}'"
local {a, b = {x = 1, y = 2}
